misc/mealie/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mealie
  namespace: mealie
spec:
  selector:
    app: mealie
  ports:
  - port: 80
    targetPort: 9000
  type: ClusterIP
